--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,5 @@ kotlinVersion=1.6.10
 logbackVersion=1.2.10
 exposedVersion=0.36.1
 kmongoVersion=4.4.0
+gsonVersion=2.8.9
 kotlin.code.style=official
